# ml-learner

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
athena/: input.py  log.py  main.py  model.py
tests/: conftest.py  test_converter.py  test_download.py  test_process.py  test_result.py
tests/fixtures/: dummy_result.json  example.txt  json_output.txt  xml_output.xml
