[tool.poetry]
name = "athena"
version = "0.1.0"
description = ""
authors = ["sankitshane <sankit.acharya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytube = "^15.0.0"
transformers = "^4.32.1"
torch = "^2.0.1"
youtube-dl = {git = "https://github.com/ytdl-org/youtube-dl.git"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
